Finalisation de la page profil et ajout des champs pays et genre aux utilisateurs

--- a/config/locales/simple_form.fr.yml
+++ b/config/locales/simple_form.fr.yml
@@ -1,5 +1,11 @@
 fr:
   simple_form:
+    options:
+      user:
+        gender:
+          male: Homme
+          female: Femelle
+          unknown: Autre
     "yes": 'Oui'
     "no": 'Non'
     required:
